@@ -1,6 +1,7 @@
 #ifndef _LINUX_PROC_FS_H
 #define _LINUX_PROC_FS_H
 
+#include <linux/config.h>
 #include <linux/malloc.h>
 
 /*
